tests/compile-fail/generated/derives-span-Ord-struct.stderr
error[E0277]: the trait bound `Error: std::cmp::Ord` is not satisfied
  --> $DIR/derives-span-Ord-struct.rs:15:5
   |
15 |     x: Error
   |     ^ the trait `std::cmp::Ord` is not implemented for `Error`
   |
   = note: required by `std::cmp::Ord::cmp`
